# GHOST-Chimera

./: .dockerignore  .env.example  .env.production.example  .env.saas.example  .env.vultr.example  .gitignore  CHANGELOG.md  CHANGES.md  CHIMERA_PILOT.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  NOTICE  README.md  SECURITY.md  docker-compose.saas.yml  docker-compose.vultr.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: bob-quality.yml  ci.yml  daily-maintenance.yml  test-matrix.yml
configs/: lobster_trap_enterprise_policy.yaml
docs/: AGENT_LOOP.md  ARCHITECTURE.md  AUTONOMY_CAPABILITY_EXTRACTION.md  BOB_OPTIONAL_TOOLING.md  BOB_POST_HACKATHON_ROADMAP.md  CAPABILITY_ADMISSION.md  CLEAN_ROOM.md  COMPETITIVE_CAPABILITY_MATRIX.md  CREDENTIAL_POOL.md  CRON_SCHEDULER.md  DESKTOP_CONTROL_HANDOFF.md  GATEWAY_SERVER.md  GITHUB_CONNECTED_AUTONOMOUS_ENGINEER.md  HACKATHON_ALL_IN_ONE.md  HACKATHON_SUBMISSION_GUIDE.md  HERMES_COMPARATIVE_AUDIT.md  HOST_EXECUTION.md  IBM_BOB_HACKATHON_WORKFLOW.md  IBM_BOB_SUBMISSION.md  IBM_BOB_WORKFLOW.md  MISSING_IMPLEMENTATIONS.md  MIXTURE_OF_AGENTS.md  MULTIPURPOSE_GHOST_PATHS.md  NATIVE_ABSORPTION.md  ORCHESTRATION_IMPLEMENTATION_PLAN.md  PERSONAL_MINIMIND_PRIVACY.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_GAPS.md  PRODUCTION_ISOLATION.md  PROVIDER_AUTH_VAULT.md  PUBLIC_LAUNCH_SAAS.md  RELEASE_CHECKLIST.md  REMOTE_CONTROL.md  RESEARCH_IMPROVEMENTS_2026-06.md  RUNNING.md  STANDING_ORDERS.md  SUBAGENT_DELEGATION.md  TRUST_RUNTIME.md  USER_TUTORIAL.md  VERSION_030.md  (+13 more)
docs/adr/: 001-chimera-pilot-scheduling.md  README.md  template.md
docs/hackathons/: ARCHITECTURE_ONE_PAGER.md  DEMO_SCRIPTS.md  DEPLOYMENT_RUNBOOK.md  ECOSYSTEM_REUSE_MAP.md  IBM_BOB_TRACK_PACK.md  PITCH_DECK_VIDEO_CHECKLIST.md  SUBMISSION_KIT.md  TRACK_SUBMISSION_TEMPLATES.md  TRUST_STORY.md
examples/: basic_config.py  bob_coverage_report.py  production_guardrails.py  test_scaffold_preview.py
ghostchimera/: __init__.py  __main__.py  capability_admission.py  capability_pack.py  config.py  logging_config.py  production_gaps.py  sdk.py  superiority.py  trust_runtime.py
ghostchimera/agent_core/: __init__.py  core.py  executor.py  memory.py  planner.py  skill_manager.py
ghostchimera/chimera_pilot/: __init__.py  agent_loop.py  agent_pool.py  autonomy.py  autonomy_jobs.py  autonomy_queue.py  backend_registry.py  batch_runner.py  calibration.py  calibration_async.py  capability_intelligence.py  checkpoint.py  claim_extractor.py  cli.py  compiler.py  context_compressor.py  credential_pool.py  cron_scheduler.py  desktop_adapter.py  desktop_policy.py  desktop_targeting.py  error_classifier.py  executor.py  executor_async.py  executor_parallel.py  gateway_server.py  hooks.py  kernel.py  mcp_wrapper.py  mixture_of_agents.py  plugin_manifest.py  policy.py  pr_review.py  resource_registry.py  result_envelope.py  scheduler.py  schema.py  semantic_verifier.py  service_registry.py  subagent.py  (+6 more)
ghostchimera/cognition_layer/: __init__.py  confidence.py  hallucination.py  reasoning.py  trust.py  workspace.py  workspace_state.py
ghostchimera/control_plane/: __init__.py  cli.py  cli_policy.py  colors.py  config.py  console.py  conversation.py  doctor.py  evolution.py  host_execution.py  latency.py  live_presence.py  local_model_cli.py  local_voice.py  model_picker.py  parallel_cli.py  setup_wizard.py  standing_orders.py
ghostchimera/evals/: __init__.py  __main__.py  runner.py
ghostchimera/harness/: __init__.py  __main__.py  case.py  runner.py
ghostchimera/integrations/: __init__.py  email_oauth.py  github_audit.py  github_ci.py  github_client.py  github_discovery.py  github_policy.py  github_review.py  github_tasks.py  github_worktree.py  remote_control.py  source_discovery.py
ghostchimera/mcp/: __init__.py  client.py  ghost_adapter.py  normalization.py  runtime.py  server.py
ghostchimera/memory_layer/: __init__.py  consolidation.py  document_ingester.py  maintenance.py  namespace_store.py  store.py  temporal_graph.py
ghostchimera/model_layer/: __init__.py  auth_profiles.py  base_provider.py  claude_agent_provider.py  codex_cli_provider.py  gemini_provider.py  llamacpp_runtime.py  llm.py  lobster_trap_provider.py  local_model_inventory.py  local_profiles.py  media_providers.py  minimind_beta_orchestrator.py  minimind_lifecycle.py  minimind_personal_agent.py  minimind_runtime.py  model_catalog.py  model_discovery.py  openai_compatible_providers.py  provider_auth.py  provider_oauth_connectors.py  providers.py  (+3 more)
plans/: ghostchimera-production-blueprint.md
scripts/: analyze_logs.py  audit_dependencies.py  bob_accelerator.py  bob_delivery_package.py  coverage_report.py  dependency_graph.py  dev_env.py  generate_api_reference.py  generate_changelog.py  generate_sbom.py  generate_test_scaffold.py  install.ps1  install.sh  run_operator_workbench_e2e.py  smoke_installed_wheel.py  update_model_provider_catalog.py  user_journey_sim.py  validate_config.py  validate_release.py
streamlit-demo/: README.md  requirements.txt  streamlit_app.py
tests/: conftest.py  test_agent_core_pilot.py  test_agent_loop.py  test_agent_pool.py  test_analytics_backend.py  test_api_reference_generator.py  test_approval_flow.py  test_audit_dependencies.py  test_autonomy_profiles.py  test_autonomy_queue.py  test_backend_registry.py  test_batch_runner.py  test_beta_gaps.py  test_bob_accelerator.py  test_bob_delivery_package.py  test_bob_optional_boundary.py  test_bob_roadmap.py  test_browser_workspace.py  test_capability_admission.py  test_capability_intelligence.py  test_capability_pack_and_sandbox.py  test_checkpoint.py  test_chimera_pilot.py  test_claude_agent_provider.py  test_code_search.py  test_codex_cli_provider.py  test_config.py  test_conscious_workspace.py  test_console.py  test_console_memory_graph.py  test_consolidation.py  test_conversation_loop.py  test_credential_pool.py  test_cron_scheduler.py  test_cwr_backend.py  test_dependency_graph.py  test_desktop_backend.py  test_dev_env.py  test_docs_site.py  test_doctor.py  (+80 more)
(+68 files in other folders)
