[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostchimera"
version = "0.4.0-beta"
description = "Local-first agent orchestration prototype with Chimera Pilot scheduling and runtime control."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "Ghost Chimera Contributors" }
]
keywords = ["agents", "orchestration", "local-first", "runtime", "scheduler"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
quantum = ["pyqpanda3>=3.0"]
local = ["llama-cpp-python>=0.3.0"]
minimind = [
  "torch>=2.6; python_version < '3.14'",
  "transformers>=4.57.0; python_version < '3.14'",
  "tokenizers>=0.20.0; python_version < '3.14'",
]
cute = ["nvidia-cutlass-dsl>=4.0; python_version == '3.12' and platform_system == 'Linux'"]
mcp = ["mcp>=1.0.0"]
gateway = ["websockets>=12.0", "croniter>=6.0.0"]
all = [
  "pyqpanda3>=3.0",
  "llama-cpp-python>=0.3.0",
  "torch>=2.6; python_version < '3.14'",
  "transformers>=4.57.0; python_version < '3.14'",
  "tokenizers>=0.20.0; python_version < '3.14'",
  "nvidia-cutlass-dsl>=4.0; python_version == '3.12' and platform_system == 'Linux'",
  "mcp>=1.0.0",
  "websockets>=12.0",
  "croniter>=6.0.0",
]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
ghostchimera = "ghostchimera.control_plane.cli:_main"
ghostchimera-parallel = "ghostchimera.control_plane.parallel_cli:_main"
chimera-pilot = "ghostchimera.chimera_pilot.cli:main"
ghostchimera-eval = "ghostchimera.evals.__main__:main"


[tool.setuptools.packages.find]
include = ["ghostchimera*"]

[tool.setuptools.package-data]
ghostchimera = [
  "py.typed",
  "control_plane/static/*.html",
  "control_plane/static/*.js",
  "control_plane/static/*.css",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
